IpAddrTracker/app/scss/_modules.scss
.app {
  background: url("/images/pattern-bg.png") no-repeat right -590px top/cover;
  height: rem(300px);
  width: 100%;
  z-index: 2;

  @include breakpoint-up(medium) {
    background-position: center;
    height: rem(280px);
  }

  &__header {
    color: #FFFFFF;
    font-size: rem(26px);
    font-weight: 500;
    letter-spacing: rem(-0.232143px);
    line-height: calc(30 / 26);

    @include breakpoint-up(medium) {
      font-size: rem(32px);
      line-height: calc(30 / 32);
    }
  }

  &__form {
    background-color: #fff;
    border-radius: rem(15px);
    box-shadow: 0px rem(50px) rem(50px) rem(-25px) rgba(0, 0, 0, 0.0983665);
    max-height: rem(58px);
    max-width: rem(550px);
    overflow: hidden;
    width: 100%;
  }

  &__search {
    font-size: rem(18px);
    line-height: calc(21 / 18);

    &::placeholder {
      color: $darkGray;
      font-size: unquote("clamp(14px, 14px + (((100vw - 375px) / 55) * 4), 18px)");
    }
  }

  &__btn {
    background: #000000;
    transition: all 500ms ease-in-out;

    &:hover {
      box-shadow: inset rem(-35px) 0 0 0 gray, inset rem(35px) 0 0 0 gray;

      & svg {
        animation: hovering 2s linear infinite;
      }
    }
  }
}

.loader {
  // don't show by default
  height: 0;
  margin-bottom: 0;
  margin-left: auto;
  margin-right: auto;
  opacity: 0;
  transform: scale(0);
  width: rem(234.65px);

  @include breakpoint-down(small) {
    transition: all 300ms ease-in-out;
  }

  &-is-loading {
    // show while loading
    height: rem(30px);
    margin-bottom: 1rem;
    opacity: 1;
    transform: scale(1);

    &+.output__label {
      // don't show label while loading
      height: 0;
      opacity: 0;
      transform: scale(0);
    }

    &~.output__toggle {
      // don't show button while loading
      height: 0;
      margin-bottom: 0;
      opacity: 0;
      transform: scale(0);
    }
  }

  &__bar {
    background-color: #4b9cdb;
    border-radius: rem(2px);
    height: rem(6px);
    margin-left: auto;
    margin-right: auto;
    width: rem(15px);
  }

  & .loader__bar {
    animation: loading 2s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
  }
}

.map {
  width: 100%;
  z-index: 0;
}

.attribution {
  font-size: rem(11px);
  text-align: center;
  width: 100%;
  z-index: 1;

  & a {
    color: hsl(228, 45%, 44%);
  }
}

